crates/reinhardt-query/tests/compile_fail/zadd_nx_gt_conflict.rs
fn main() {
    use reinhardt_query::nosql::redis::zset::ZSetCommand;
    let _ = ZSetCommand::zadd("z").nx().only_if_greater();
}
